--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,14 +11,15 @@
     <ImageView
         android:id="@+id/logo"
         android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_height="0dp"
         android:layout_marginTop="50dp"
-        android:src="@drawable/clevertap"
+        android:layout_marginBottom="30dp"
         android:contentDescription="App Logo"
-        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/clevertap"
+        app:layout_constraintBottom_toTopOf="@+id/name"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- Name Input -->
@@ -27,44 +27,53 @@
         android:id="@+id/name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="21dp"
+        android:background="@drawable/rounded_edit_text"
         android:hint="Enter Name"
         android:inputType="textPersonName"
         android:padding="12dp"
-        android:background="@drawable/rounded_edit_text"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="20dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <!-- Email Input -->
     <EditText
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_edit_text"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
         android:padding="12dp"
-        android:background="@drawable/rounded_edit_text"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 
     <!-- Login Button -->
     <Button
         android:id="@+id/loginButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#6200EE"
+        android:text="Login"
         android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/registerButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email"
-        android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
 
     <!-- Register Button -->
@@ -72,13 +81,14 @@
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#DDDDDD"
+        android:text="Register"
         android:textColor="#333333"
-        app:layout_constraintTop_toBottomOf="@id/loginButton"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/skipButton"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
 
     <!-- Skip Button -->
@@ -86,39 +96,54 @@
         android:id="@+id/skipButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Skip"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="28dp"
         android:backgroundTint="#DDDDDD"
+        android:text="Skip"
         android:textColor="#333333"
-        app:layout_constraintTop_toBottomOf="@id/registerButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintBottom_toTopOf="@+id/appNative"
+        app:layout_constraintEnd_toEndOf="@+id/registerButton"
+        app:layout_constraintTop_toBottomOf="@+id/registerButton" />
 
     <!-- In-App Notification -->
     <Button
         android:id="@+id/inAppNotification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="2dp"
         android:backgroundTint="#DDDDDD"
         android:text="InApp Notification"
         android:textColor="#333333"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.133"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/skipButton" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/appNative"
+        app:layout_constraintEnd_toStartOf="@+id/appNative"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <Button
         android:id="@+id/appInbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="63dp"
         android:backgroundTint="#DDDDDD"
         android:text="App Inbox"
         android:textColor="#333333"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/inAppNotification"
+        app:layout_constraintTop_toBottomOf="@+id/appNative" />
+
+    <Button
+        android:id="@+id/appNative"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="31dp"
+        android:backgroundTint="#DDDDDD"
+        android:text="Native Display"
+        android:textColor="#333333"
+        app:layout_constraintBottom_toTopOf="@+id/appInbox"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.133"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/inAppNotification" />
+        app:layout_constraintStart_toEndOf="@+id/inAppNotification"
+        app:layout_constraintTop_toBottomOf="@+id/skipButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
